# ccc

./: Cargo.toml  LICENSE  README.md  vercel.json
.github/workflows/: ci.yml  release.yml
docs/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs/src/pages/: index.astro
scripts/: e2e.sh  install.ps1  install.sh  smoke-windows.ps1  smoke.sh
src/: creds.rs  daemon.rs  main.rs  oauth.rs  oauthcfg.rs  paths.rs  procinfo.rs  proxy.rs  routes.rs  setup.rs  store.rs  t3.rs  vault.rs
