[package]
name = "ccc"
version = "0.1.0"
edition = "2021"
description = "Multi-account switcher for Claude Code (subscription auth), routing per-thread through a local proxy."
license = "MIT"

[[bin]]
name = "ccc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync", "process"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
fs2 = "0.4"
bytes = "1"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
